Add null/empty checks for consistency